# ztm-ai

./: pyproject.toml
basics/: intro.ipynb
notebooks/: section3.ipynb
notebooks/basics/: intro.ipynb
notes/: Index.md  Model basics.md
notes/.obsidian/: workspace.json
notes/Deep Learning/: Neural Networks and Tensor(flow).md  Regression.md  Theory.md
