[project]
name = "ztm-ai"
version = "0.1.0"
description = ""
authors = [
    {name = "externref",email = "shiva02939@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "3.10"
dependencies = [
    "tensorflow (>=2.19.0,<3.0.0)",
    "tensorflow-io-gcs-filesystem (==0.31)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "pydot (>=4.0.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
